# stream_client

./: .gitmodules  CMakeLists.txt
src/: main.cpp  streamclientmanager.cpp  streamclientmanager.hpp  vlcmanager.cpp  vlcmanager.hpp
src/ui/panels/: connectpanel.cpp  connectpanel.hpp  streampanel.cpp  streampanel.hpp
src/ui/subpanels/: addresssubpanel.cpp  addresssubpanel.hpp  channelssubpanel.cpp  channelssubpanel.hpp  controlsubpanel.cpp  controlsubpanel.hpp
src/ui/windows/: mainwindow.cpp  mainwindow.hpp
